--- a/startpage.html
+++ b/startpage.html
@@ -244,62 +244,13 @@
     </div>
 
     <script>
-        // Favicon cache using localStorage
-        const faviconCache = {
-            get: function(url) {
-                try {
-                    const cached = localStorage.getItem('favicon_' + url);
-                    if (cached) {
-                        const data = JSON.parse(cached);
-                        // Check if cache is less than 7 days old
-                        if (Date.now() - data.timestamp < 7 * 24 * 60 * 60 * 1000) {
-                            return data.icon;
-                        }
-                    }
-                } catch (e) {
-                    console.error('Cache read error:', e);
-                }
-                return null;
-            },
-            set: function(url, iconData) {
-                try {
-                    localStorage.setItem('favicon_' + url, JSON.stringify({
-                        icon: iconData,
-                        timestamp: Date.now()
-                    }));
-                } catch (e) {
-                    console.error('Cache write error:', e);
-                }
-            }
-        };
-
-        // Function to load and cache favicon
-        async function loadFavicon(url) {
-            const origin = new URL(url).origin;
-            const faviconUrl = origin + '/favicon.ico';
-            
-            // Check cache first
-            const cached = faviconCache.get(origin);
-            if (cached) {
-                return cached;
-            }
-
-            // Try to fetch and convert to base64
+        // Function to get favicon URL with fallback using Google's favicon service
+        function getFaviconUrl(url) {
             try {
-                const response = await fetch(faviconUrl);
-                const blob = await response.blob();
-                return new Promise((resolve, reject) => {
-                    const reader = new FileReader();
-                    reader.onloadend = () => {
-                        const base64 = reader.result;
-                        faviconCache.set(origin, base64);
-                        resolve(base64);
-                    };
-                    reader.onerror = reject;
-                    reader.readAsDataURL(blob);
-                });
+                const domain = new URL(url).hostname;
+                // Use Google's favicon service as it bypasses CORS issues
+                return `https://www.google.com/s2/favicons?domain=${domain}&sz=64`;
             } catch (error) {
-                console.log('Failed to load favicon for', origin);
                 return 'data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 24 24%22%3E%3Ctext y=%2218%22 font-size=%2218%22%3E🌐%3C/text%3E%3C/svg%3E';
             }
         }
